# suitdrop-contracts

./: .gitignore  Beaker.toml  Cargo.toml  Dockerfile  FAQ.md  README.md
.github/workflows/: release-artifacts.yml  tester.yml
archive/local-chain/: Cargo.toml
archive/local-chain/setup/: .env.example  start.sh
archive/local-chain/src/: lib.rs
contracts/cw-bonding-pool/: Cargo.toml  README.md
contracts/cw-bonding-pool/src/: calc.rs  contract.rs  curves.rs  error.rs  helpers.rs  interface.rs  lib.rs  msg.rs  state.rs
contracts/cw721-suit/: Cargo.toml  README.md
contracts/cw721-suit/src/: msg.rs
contracts/suitdrop-redeem/: Cargo.toml  README.md
contracts/suitdrop-redeem/src/: contract.rs  error.rs  msg.rs  state.rs
output/: create_cw_pool_msg_broadcast.json  create_cw_pool_msg_signed.json  prop.569.json  prop.json
schema/: cw-bonding-pool.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_bonding_pool_state.json  response_to_calc_in_amt_given_out.json  response_to_calc_out_amt_given_in.json  response_to_get_swap_fee.json  response_to_get_total_pool_liquidity.json  response_to_spot_price.json  sudo.json
schemas/: cw-bonding-pool.json  cw20-merkle-airdrop.json  suitdrop-redeem.json
schemas/cw721-suit/: cw721-suit.json
scripts/: authz_vote.sh  authz_vote_yes_msg_testnet.json  build_web.sh  collect_schemas.sh  config.sh  create_cw_pool_msg.json  deploy.sh  deploy_one.sh  full_cw_pool_deploy.sh  instantiate.sh  instantiate_airdrop.sh  instantiate_cosmwasmpool.sh  instantiate_redeem.sh  propose_cwpool.proposal.json  propose_cwpool.sh  propose_decrease_denom_create_fee.proposal.json  propose_decrease_denom_create_fee.proposal.signed.json  samplepool.json  test-airdrop-proofs.json  test-airdrop.json  test-airdrop.txt  tf_fee_prop.json  tf_fee_prop.sh  vote.sh
tests/e2e/: Cargo.toml
tests/e2e/tests/: .multi_tests.rs  tests.rs
tests/integration/: Cargo.toml
tests/integration/tests/: multitest.rs  tests.rs.ignore
ts/sdk/: README.md  package.json  typedoc.json
