[workspace]
members = ["contracts/*", "tests/*"]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

# [workspace.package]
# rust-version = "1.64.0"

[workspace.dependencies]
cw721-suit = { path = './contracts/cw721-suit' }
cw721-base = { version = "0.17.0", features = ["library"] }
cosmwasm-std = { version = "1.1.9", features = ["stargate"] }
cosmwasm-storage = "1.1.9"
cosmwasm-schema = "1.1.9"
cw-storage-plus = "1.0.1"
cw-utils = "0.16.0"
cw2 = "1.0.0"
thiserror = { version = "1.0.37" }
