[workspace]
members = ["contracts/*", "tests/*"]
resolver = "2"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = true

# [workspace.package]
# rust-version = "1.64.0"

[workspace.dependencies]
cosmwasm-schema = "1.1.2"
cosmwasm-std = "1.1.2"
cosmwasm-storage = "1.1.2"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw721 = { version = "0.17.0" }
cw-storage-macro = { version = "1.0.1" }
osmosis-test-tube = { git = "https://github.com/osmosis-labs/test-tube.git", branch = "autobuild-v15.0.0" }
cw721-suit = { path = './contracts/cw721-suit' }
cw721-base = { version = "0.17.0", features = ["library"] }
cw-utils = { version = "1.0.1" }
rust_decimal = "1.14.3"
integer-sqrt = "0.1.5"
integer-cbrt = "0.1.2"
osmosis-std = { version = "0.15.2", default-features = false }
prost = { version = "0.11.0", default-features = false }
