[package]
name = "local-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.1.9", features = ["stargate"] }
serde_json = { version = "1.0.96" }
osmosis-std = "0.15.2"
cw-bonding-pool = { path = "../../contracts/cw-bonding-pool", features = [
  "library",
  "interface",
] }
cw721-suit = { path = "../../contracts/cw721-suit", features = ["library"] }
suitdrop-redeem = { path = "../../contracts/suitdrop-redeem", features = [
  "library",
] }
cw-multi-test = "0.16.4"
cw-orch = "0.12.0"

[dev-dependencies]
# Deps for deployment
dotenv = { version = "0.15.0" }     # Enables loading of .env files
env_logger = { version = "0.10.0" } # Enables logging to stdout
