[package]
name = "integration"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.1.9", features = ["stargate"] }

[dev_dependencies]
serde_json = { version = "1.0.96" }
osmosis-std = "0.15.2"
cw-bonding-pool = { path = "../../contracts/cw-bonding-pool", features = [
  "library",
] }
cw721-suit = { path = "../../contracts/cw721-suit", features = ["library"] }
cw721 = { workspace = true }
cw721-base = { workspace = true }
suitdrop-redeem = { path = "../../contracts/suitdrop-redeem", features = [
  "library",
] }
cw-multi-test = "0.16.4"
# osmosis-test-tube = { workspace = true }
